language/move-lang/tests/move_check/parser/spec_parsing_index_fail.exp
error: 

   ┌── tests/move_check/parser/spec_parsing_index_fail.move:3:15 ───
   │
 3 │       let _ = x[1];
   │               ^^^^ `_[_]` index operator only allowed in specifications
   │

