language/move-lang/tests/move_check/parser/spec_parsing_index_fail.move
module M {
    fun index_in_prog(x: u64) {
      let _ = x[1];
    }
}
